added smooth scroll

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -78,6 +78,8 @@ p {
 #features {
   padding: 120px 0;
   text-align: center;
+}
+#services {
   background-color: $bg-light;
 }
 .box {
@@ -94,6 +96,7 @@ p {
 }
 //FEATURES
 #features {
+  background-color: #003366 !important;
 }
 //PRICING
 #pricing {
