--- a/scss/bootstrap-reboot.css
+++ b/scss/bootstrap-reboot.css
@@ -101,11 +101,11 @@ sup {
   top: -.5em; }
 
 a {
-  color: #007bff;
+  color: #2f60c3;
   text-decoration: none;
   background-color: transparent; }
   a:hover {
-    color: #0056b3;
+    color: #204285;
     text-decoration: underline; }
 
 a:not([href]):not([tabindex]) {
